subnets.tf
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id     
  cidr_block              = "10.0.1.0/24"    
  availability_zone       = "eu-west-3a"        
  map_public_ip_on_launch = true                

  tags = {
    Name = "public-subnet"
  }
}

# --- Subnet PRIVÉ ---
resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.main.id  
  cidr_block        = "10.0.2.0/24"           
  availability_zone = "eu-west-3a"

  tags = {
    Name = "private-subnet"
  }
}
